--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -12,6 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>SUCCESS IN SIGNIN</div>
-        <p>#{userBean.userModel.username}</p>
+        <p>Model: #{userBean.userModel.email}</p>
+        <p>Bean: #{userBean.email}</p>
     </body>
 </html>
